# pyvm-updater

./: .flake8  .gitignore  .secrets.baseline  README.md  check_requirements.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: contributor-automation.yml  pr-quality.yaml
src/pyvm_updater/: cli.py  config.py  constants.py  installers.py  metadata_store.py  paths.py  tui.py  utils.py  venv.py  version.py  wizard.py
src/pyvm_updater/plugins/: base.py  manager.py  standard.py
tests/: test_cli.py  test_cli_use.py  test_colorized_list.py  test_json_output.py  test_paths.py  test_plugins.py  test_spinner.py  test_store_detection.py  test_venv.py  test_venv_duplicate.py  test_venv_rename.py  test_version.py
